# simbotix_core

./: .gitignore  README.md  pyproject.toml
simbotix_core/: __init__.py  doc_events.py  hooks.py  modules.txt  setup.py
simbotix_core/api/: __init__.py  licensing.py
simbotix_core/doctype/app_license/: app_license.json  app_license.py  test_app_license.py
simbotix_core/doctype/simbotix_core_settings/: simbotix_core_settings.json  simbotix_core_settings.py  test_simbotix_core_settings.py
simbotix_core/doctype/usage_alert/: test_usage_alert.py  usage_alert.json  usage_alert.py
simbotix_core/doctype/usage_record/: test_usage_record.py  usage_record.json  usage_record.py
simbotix_core/fixtures/: README.md  email_campaign.json  email_template.json
simbotix_core/simbotix_core/: __init__.py
simbotix_core/tests/: __init__.py  test_api.py  test_central_api.py  test_licensing.py  test_metering.py
simbotix_core/utils/: __init__.py  central_api.py  licensing.py  metering.py
